--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://cassioluciano98.github.io/Projeto-Cadastro-de-Usuarios",
   "name": "react-cadastro",
   "private": true,
   "version": "0.0.0",
