--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://cassioluciano98.github.io/Projeto-Cadastro-de-Usuarios",
+  "homepage": ".",
   "name": "react-cadastro",
   "private": true,
   "version": "0.0.0",
